--- a/sprint-1/stylesheets/sass/views/_default.scss
+++ b/sprint-1/stylesheets/sass/views/_default.scss
@@ -75,7 +75,6 @@
     
     .main {
        width: 100%; 
-       @include set-padding(0, 3vw);
     }
     
     .image {
