--- a/sprint-1/stylesheets/sass/views/_desktop.scss
+++ b/sprint-1/stylesheets/sass/views/_desktop.scss
@@ -4,6 +4,10 @@
 
 @mixin desktop-view {
     @include desktop {
+        html {
+            font-size: 16px;
+        }
+
         .hero {
             &__text {
                 @include text(5rem, 7rem);
@@ -23,6 +27,10 @@
         
         .article {
             @include set-padding;
+
+            &__main {
+                @include set-padding(0, 5%);
+            }
         } 
     }   
 }
